# python_Mod_08

ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: oracle.py
